# glassbox

./: .gitignore  NOTICE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/default_world/: world.json
docs/: prd_ops_mode.md  schema_atlas.html  schema_comparison.md  sienna_comparison.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  glossary.ts  icons.tsx  plotly-shim.d.ts  styles.css  theme.ts
glassbox/: challenges.py  explain.py  interop.py
glassbox/api/: __init__.py  app.py  editing.py  service.py
glassbox/engines/: __init__.py  adequacy.py  base.py  cem.py  dynamics.py  economic_core.py  emt.py  pcm.py  powerflow.py
glassbox/operators/: __init__.py  attribute.py  base.py  spatial.py  temporal.py
glassbox/rtops/: __init__.py  elaborate.py  kernel.py  scenarios.py  scoring.py  session.py  switching.py  telemetry.py  topology.py
glassbox/scenario/: __init__.py  builds.py  diff.py  planning.py  runner.py  scenario.py
glassbox/schema/: __init__.py  dynamic_models.py  entities.py  facets.py  results.py  substation.py  temporal.py  timeseries.py  units.py  world.py
glassbox/tests/: test_adequacy.py  test_api.py  test_dynamics.py  test_editing.py  test_emt.py  test_engines.py  test_interop.py  test_operators.py  test_opsim_session.py  test_oracles.py  test_phenomena.py  test_powerflow.py  test_rtops_interchange.py  test_rtops_kernel.py  test_rtops_phase3.py  test_rtops_scoring.py  test_scenario.py  test_schema.py  test_serialize.py  test_substation_layer.py  test_weather.py  test_world.py
glassbox/validation/: __init__.py  phenomena.py
rosetta/: __init__.py  cli.py  core.py
scripts/: build_default_world.py  dev.sh  import_network.py  run.sh
tests/: test_bench.py
(+38 files in other folders)
