[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox"
version = "0.1.0"
description = "An inspectable multi-paradigm grid modeling sandbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pydantic>=2.5",
    "networkx>=3.0",
    "pyarrow>=14.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "linopy>=0.3",
    "highspy>=1.7",
]

[project.optional-dependencies]
# Dev-only correctness oracles (Section 2.3 / 11.2) — not runtime deps
oracles = ["pypsa>=0.27", "pandapower>=2.14", "andes>=1.9"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
glassbox-build-world = "scripts.build_default_world:main"

[tool.setuptools.packages.find]
include = ["glassbox*"]

[tool.pytest.ini_options]
testpaths = ["glassbox/tests"]
